--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,9 @@ erl_crash.dump
 # Also ignore archive artifacts (built via "mix archive.build").
 *.ez
 
-# Ignore package tarball (built via "mix hex.build").
-streamer-*.tar
-
 # Temporary files, for example, from tests.
 /tmp/
+
+.elixir_ls
+
+config/secrets.exs
